fixed bug with sidebar shadow on mobile

--- a/imports/components/MainLayout/MainLayout.css
+++ b/imports/components/MainLayout/MainLayout.css
@@ -4,6 +4,12 @@
 	min-height: 100vh;
 }
 
+@media only screen and (max-width: 550px) {
+	.container {
+		min-height: calc(100vh - 60px);
+	}
+}
+
 .content-container {
 	width: auto;
 	background-color: #ffffff;
